End the mouse wheel scrolling transaction when forcing "passToParent" for a combobox (fixes an assertion). b=398334 r=masayuki sr=roc a1.9=beltzner